--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=esun-interview-backend
+# For MySQL connection
+spring.datasource.url=jdbc:mysql://localhost:3306/db?serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.http.encoding.force=true
